<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="internationalproject.medrawumeasure.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/login_string"
            android:textColor="#3e64a0"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/PtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_string"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/PtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_string"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/CbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me_string" />

        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_string" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account_string"
        android:textSize="18sp" />

    <Button
        android:id="@+id/BtnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_string" />

</LinearLayout>
