<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal"
    tools:context="internationalproject.medrawumeasure.MainActivity">

    <ImageView
        android:id="@+id/canvas_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/canvas_string" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <Button
            android:id="@+id/BtnAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/account_string"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/gallery_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="GoToGallery"
            android:text="@string/gallery_string" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="GoToSave"
            android:text="@string/save_string" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ClearCanvas"
            android:text="@string/clear_string" />

        <Button
            android:id="@+id/undo_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="UndoLine"
            android:text="@string/undo_string" />

        <Button
            android:id="@+id/redo_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="RedoLine"
            android:text="@string/redo_string" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="RemovePoints"
            android:text="@string/remove_string" />

        <Button
            android:id="@+id/bluetooth_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#0183fd"
            android:text="@string/bluetooth_string"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>
