<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".SaveActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_drawing_string"
            android:textColor="#3e64a0"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/coordx_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/coordy_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawing_name_string"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/angles_string"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/mylayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/Angle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Angle10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measurements_string"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/mylayoutmeasurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/measurement1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <EditText
                android:id="@+id/measurement10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SaveToDatabase"
            android:text="@string/add_drawing_string" />

    </LinearLayout>

</ScrollView>